--- a/data.yml
+++ b/data.yml
@@ -1,5 +1,12 @@
 defaultStorageMapping: STAGE
-jobs: {}
+jobs:
+  Job-5:
+    excludeSelector: ""
+    id: 5
+    includeSelector: "+{ location: DWH name: DIM_SUPPLIER }"
+    name: Supplier Pipeline
+    steps: []
+    subgraphs: []
 locations:
   DWH:
     mappingDefinitions:
