--- a/nodes/DWH-V_SUPPLIER.yml
+++ b/nodes/DWH-V_SUPPLIER.yml
@@ -1,5 +1,5 @@
 steps:
-  V_SUPPLIER_MKT-1533:
+  V_SUPPLIER-192:
     operation:
       config:
         insertStrategy: UNION
@@ -17,13 +17,13 @@ steps:
         appliedNodeTests: []
         columns:
           - columnReference:
-              columnCounter: 17379
-              stepCounter: "1533"
+              columnCounter: 3433
+              stepCounter: "192"
             dataType: NUMBER
             description: ""
             hashColumns: []
             hashDetails: null
-            name: DIM_DIM_SUPPLIER_KEY
+            name: DIM_SUPPLIER_KEY
             nullable: true
             sourceColumnReferences:
               - columnReferences:
@@ -31,134 +31,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17380
-              stepCounter: "1533"
-            dataType: NUMBER(38,0)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: R_REGIONKEY
-            nullable: "true"
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17356
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17381
-              stepCounter: "1533"
-            dataType: VARCHAR(25)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: R_NAME
-            nullable: "true"
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17357
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17382
-              stepCounter: "1533"
-            dataType: VARCHAR(152)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: R_COMMENT
-            nullable: "true"
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17358
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17383
-              stepCounter: "1533"
-            dataType: NUMBER(38,0)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: N_NATIONKEY
-            nullable: "true"
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17359
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17384
-              stepCounter: "1533"
-            dataType: VARCHAR(25)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: N_NAME
-            nullable: "true"
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17360
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17385
-              stepCounter: "1533"
-            dataType: VARCHAR(15)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: S_PHONE
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17361
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17386
-              stepCounter: "1533"
-            dataType: VARCHAR(152)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: N_COMMENT
-            nullable: "true"
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17362
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17387
-              stepCounter: "1533"
-            dataType: NUMBER(38,0)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: N_REGIONKEY
-            nullable: "true"
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17363
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17388
-              stepCounter: "1533"
-            dataType: NUMBER(12,2)
-            description: ""
-            hashColumns: []
-            hashDetails: null
-            name: S_ACCTBAL
-            nullable: false
-            sourceColumnReferences:
-              - columnReferences:
-                  - columnCounter: 17364
-                    stepCounter: "1532"
-                transform: ""
-          - columnReference:
-              columnCounter: 17389
-              stepCounter: "1533"
+              columnCounter: 3434
+              stepCounter: "192"
             dataType: NUMBER(38,0)
             description: ""
             hashColumns: []
@@ -171,13 +45,13 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17390
-              stepCounter: "1533"
+              columnCounter: 3435
+              stepCounter: "192"
             dataType: VARCHAR(25)
             description: ""
             hashColumns: []
             hashDetails: null
-            name: S_NAME
+            name: SUPPLIER_NAME
             nullable: false
             sourceColumnReferences:
               - columnReferences:
@@ -185,8 +59,64 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17391
-              stepCounter: "1533"
+              columnCounter: 3436
+              stepCounter: "192"
+            dataType: VARCHAR(25)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: NATION
+            nullable: "true"
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 17360
+                    stepCounter: "1532"
+                transform: ""
+          - columnReference:
+              columnCounter: 3437
+              stepCounter: "192"
+            dataType: VARCHAR(25)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: REGION
+            nullable: "true"
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 17357
+                    stepCounter: "1532"
+                transform: ""
+          - columnReference:
+              columnCounter: 3438
+              stepCounter: "192"
+            dataType: VARCHAR(15)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: S_PHONE
+            nullable: false
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 17361
+                    stepCounter: "1532"
+                transform: ""
+          - columnReference:
+              columnCounter: 3439
+              stepCounter: "192"
+            dataType: NUMBER(12,2)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: S_ACCTBAL
+            nullable: false
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 17364
+                    stepCounter: "1532"
+                transform: ""
+          - columnReference:
+              columnCounter: 3440
+              stepCounter: "192"
             dataType: VARCHAR(255)
             description: ""
             hashColumns: []
@@ -199,8 +129,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17392
-              stepCounter: "1533"
+              columnCounter: 3441
+              stepCounter: "192"
             dataType: VARCHAR(40)
             description: ""
             hashColumns: []
@@ -213,8 +143,22 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17393
-              stepCounter: "1533"
+              columnCounter: 3442
+              stepCounter: "192"
+            dataType: VARCHAR(40)
+            description: ""
+            hashColumns: []
+            hashDetails: null
+            name: S_ADDRESS2
+            nullable: true
+            sourceColumnReferences:
+              - columnReferences:
+                  - columnCounter: 20067
+                    stepCounter: "1532"
+                transform: ""
+          - columnReference:
+              columnCounter: 3443
+              stepCounter: "192"
             dataType: NUMBER(38,0)
             description: ""
             hashColumns: []
@@ -227,8 +171,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17394
-              stepCounter: "1533"
+              columnCounter: 3444
+              stepCounter: "192"
             dataType: VARCHAR(50)
             description: ""
             hashColumns: []
@@ -241,8 +185,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17395
-              stepCounter: "1533"
+              columnCounter: 3445
+              stepCounter: "192"
             dataType: VARCHAR(101)
             description: ""
             hashColumns: []
@@ -255,8 +199,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17396
-              stepCounter: "1533"
+              columnCounter: 3446
+              stepCounter: "192"
             dataType: STRING
             description: ""
             hashColumns: []
@@ -269,8 +213,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17397
-              stepCounter: "1533"
+              columnCounter: 3447
+              stepCounter: "192"
             dataType: NUMBER
             description: ""
             hashColumns: []
@@ -283,8 +227,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17398
-              stepCounter: "1533"
+              columnCounter: 3448
+              stepCounter: "192"
             dataType: VARCHAR
             description: ""
             hashColumns: []
@@ -297,8 +241,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17399
-              stepCounter: "1533"
+              columnCounter: 3449
+              stepCounter: "192"
             dataType: TIMESTAMP
             description: ""
             hashColumns: []
@@ -311,8 +255,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17400
-              stepCounter: "1533"
+              columnCounter: 3450
+              stepCounter: "192"
             dataType: TIMESTAMP
             description: ""
             hashColumns: []
@@ -325,8 +269,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17401
-              stepCounter: "1533"
+              columnCounter: 3451
+              stepCounter: "192"
             dataType: TIMESTAMP
             description: ""
             hashColumns: []
@@ -339,8 +283,8 @@ steps:
                     stepCounter: "1532"
                 transform: ""
           - columnReference:
-              columnCounter: 17402
-              stepCounter: "1533"
+              columnCounter: 3452
+              stepCounter: "192"
             dataType: TIMESTAMP
             description: ""
             hashColumns: []
@@ -362,11 +306,11 @@ steps:
                 nodeName: DIM_SUPPLIER
             join:
               joinCondition: FROM {{ ref('DWH', 'DIM_SUPPLIER') }} "DIM_SUPPLIER"
-            name: V_SUPPLIER_MKT
+            name: V_SUPPLIER
             noLinkRefs: []
-      name: V_SUPPLIER_MKT
+      name: V_SUPPLIER
       overrideSQL: false
       schema: ""
       sqlType: View
       type: sql
-    stepCounter: "1533"
+    stepCounter: "192"
