Corrected nullable columns.

--- a/nodes/DWH-DIM_SUPPLIER.yml
+++ b/nodes/DWH-DIM_SUPPLIER.yml
@@ -258,7 +258,7 @@ steps:
             dataType: VARCHAR
             description: ""
             name: CUSTOMER_RATING
-            nullable: false
+            nullable: true
             sourceColumnReferences:
               - columnReferences:
                   - columnCounter: 3629
