--- a/data.yml
+++ b/data.yml
@@ -3,7 +3,7 @@ jobs:
   Job-5:
     excludeSelector: ""
     id: 5
-    includeSelector: "+{ location: DWH name: DIM_SUPPLIER }"
+    includeSelector: "+{ location: DWH name: DIM_NATION_REGION_SUPPLIER }"
     name: Supplier Pipeline
     steps: []
     subgraphs: []
@@ -5090,4 +5090,15 @@ subgraphs:
       - "204"
       - "205"
       - "206"
+  Subgraph-6:
+    id: 6
+    name: Staging 2
+    steps:
+      - "208"
+      - "209"
+      - "210"
+      - "211"
+      - "212"
+      - "213"
+      - "214"
 version: 1
